# Ros2_Learning_Tasks

./: .gitignore  README.md
task1/src/tortoisebot_bringup/: package.xml  setup.py
task1/src/tortoisebot_bringup/launch/: simulation_bringup.launch.py
task1/src/tortoisebot_description/: CMakeLists.txt  package.xml
task1/src/tortoisebot_description/urdf/: tortoisebot.urdf
task1/src/tortoisebot_gazebo/: package.xml  setup.py
task1/src/tortoisebot_gazebo/launch/: simulation.launch.py
task1/src/tortoisebot_rviz/: package.xml  setup.py
task1/src/tortoisebot_rviz/launch/: visualization.launch.py
task2/src/tortoisebot_bringup/: package.xml  setup.py
task2/src/tortoisebot_bringup/launch/: lidar_bringup.launch.py
task2/src/tortoisebot_description/: CMakeLists.txt  package.xml
task2/src/tortoisebot_description/launch/: description.launch.py
task2/src/tortoisebot_description/urdf/: tortoisebot_base.urdf.xacro  tortoisebot_castor.urdf.xacro  tortoisebot_plugins.urdf.xacro  tortoisebot_wheel.urdf.xacro
task2/src/tortoisebot_gazebo/: package.xml  setup.py
task2/src/tortoisebot_gazebo/launch/: simulation.launch.py
task2/src/tortoisebot_rviz/: package.xml  setup.py
task2/src/tortoisebot_rviz/config/: lidar_visualization.rviz  visualization.rviz
task2/src/tortoisebot_sensor_filters/: CMakeLists.txt  package.xml
task2/src/tortoisebot_sensor_filters/src/: ClosestDistancePublisher.cpp
task3/src/tortoisebot_bringup/: package.xml  setup.py
task3/src/tortoisebot_bringup/launch/: ball_follower_bringup.launch.py  lidar_bringup.launch.py  simulation_bringup.launch.py
task3/src/tortoisebot_controller/: CMakeLists.txt  package.xml
task3/src/tortoisebot_controller/src/: ObjectFollower.cpp
task3/src/tortoisebot_description/: CMakeLists.txt  package.xml
task3/src/tortoisebot_description/urdf/: tortoisebot.urdf.xacro  tortoisebot_plugins.urdf.xacro
task3/src/tortoisebot_gazebo/: package.xml  setup.py
task3/src/tortoisebot_gazebo/config/: lidar_bridge.yaml  simulation_bridge.yaml
task3/src/tortoisebot_gazebo/launch/: simulation.launch.py
task3/src/tortoisebot_gazebo/sdf/: ball_moving_world.sdf  empty.sdf  lidar_test_world.sdf
task3/src/tortoisebot_gazebo_plugins/: CMakeLists.txt  package.xml
task3/src/tortoisebot_gazebo_plugins/include/tortoisebot_gazebo_plugins/: BallController.hpp
task3/src/tortoisebot_gazebo_plugins/src/: BallController.cpp
task3/src/tortoisebot_rviz/: package.xml  setup.cfg  setup.py
task3/src/tortoisebot_rviz/launch/: visualization.launch.py
task3/src/tortoisebot_sensor_filters/: CMakeLists.txt  package.xml
task3/src/tortoisebot_sensor_filters/src/: ClosestObjectPublisher.cpp
