<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tortoisebot_description</name>
  <version>0.0.0</version>
  <description>Description package for Tortoisebot robot</description>
  <maintainer email="govindssarath@gmail.com">Govind S Sarath</maintainer>
  <license>Apache-2.0</license>

  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
