<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tortoisebot_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation package for Tortoisebot robot</description>
  <maintainer email="govindssarath@gmail.com">Govind S Sarath</maintainer>
  <license>Apache-2.0</license>

  <depend>ros_gz_sim</depend>
  <depend>tortoisebot_description</depend>
  <depend>tortoisebot_gazebo_plugins</depend>
  <depend>ros_gz_bridge</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
